<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".huesos">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="70dp"
            app:srcCompat="@drawable/huesos" />

        <TextView
            android:id="@+id/craneo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="173dp"
            android:text="@string/craneo" />

        <TextView
            android:id="@+id/humero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginStart="100dp"
            android:text="@string/humero" />

        <TextView
            android:id="@+id/cubito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginStart="80dp"
            android:text="@string/cubito" />

        <TextView
            android:id="@+id/pelvis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginStart="130dp"
            android:text="@string/pelvis" />

        <TextView
            android:id="@+id/tibia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginStart="135dp"
            android:text="@string/tibia" />

        <TextView
            android:id="@+id/costilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginStart="250dp"
            android:text="@string/costilla" />

        <TextView
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="275dp"
            android:text="@string/radio" />

        <TextView
            android:id="@+id/femur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:layout_marginStart="240dp"
            android:text="@string/femur" />

        <TextView
            android:id="@+id/perone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginStart="235dp"
            android:text="@string/perone" />

        <Button
            android:id="@+id/espagnol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp"
            android:layout_marginStart="35dp"
            android:text="@string/espagnol" />

        <Button
            android:id="@+id/frances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp"
            android:layout_marginStart="150dp"
            android:text="@string/frances" />

        <Button
            android:id="@+id/ingles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp"
            android:layout_marginStart="265dp"
            android:text="@string/ingles" />

    </FrameLayout>
</android.support.constraint.ConstraintLayout>